--- a/.gitignore
+++ b/.gitignore
@@ -349,6 +349,9 @@ OpenCover/
 # Azure Stream Analytics local run output
 ASALocalRun/
 
+# Test console app
+PayPro.NET.Sandbox/
+
 # MSBuild Binary and Structured Log
 *.binlog
 
